<resources>
    <string name="app_name">Repertoire</string>
    <string name="action_delete">Delete</string>
    <string name="action_deselect_all">Deselect all</string>
    <string name="action_random">Random song</string>
    <string name="action_search">Search</string>
    <string name="action_select_all">Select all</string>
    <string name="action_transpose">Transpose</string>
    <string name="action_transpose_with_value">Transpose (+%d)</string>
    <string name="add_songs">Add songs</string>
    <string name="cannot_read_file_error_message">Cannot read file 😞.\nDid you move it?\nTry adding it again.</string>
    <string name="name_not_found_error_message">Name Not Found</string>
    <string name="repertoire_db">RepertoireDb</string>
    <string name="song_list">Song list</string>
    <plurals name="song_count">
        <item quantity="one">%d song</item>
        <item quantity="other">%d songs</item>
    </plurals>
</resources>
